Add more sample posts

--- a/_drafts/2010-01-08-post-chat.md
+++ b/_drafts/2010-01-08-post-chat.md
@@ -1,10 +1,8 @@
 ---
 title: "Post: Chat"
 categories:
-  - Blog
+  - Sample Posts
 tags:
-  - chat
-  - Post Formats
 ---
 
 Abbott: Strange as it may seem, they give ball players nowadays very peculiar names.
