--- a/_drafts/2010-03-07-post-link.md
+++ b/_drafts/2010-03-07-post-link.md
@@ -1,10 +1,10 @@
 ---
 title: "Post: Link"
 categories:
-  - Blog
+  - Sample Posts
 tags:
-  - link
-  - Post Formats
+  - Layouts
+  - Formatting
 link: https://github.com
 ---
 
